# bpf-benchmark

./: .dockerignore  .gitignore  .gitmodules  CLAUDE.md  Makefile  README.md  REVIEW.md  benchmark.md  benchmark_zh.md  bpftime-ubpf  corpus-rejit-vm-batch-e7olcarc.json  corpus-rejit-vm-batch-r155ld_p.json  corpus-rejit-vm-batch-result-em0xk23d.json  corpus-rejit-vm-batch-result-x9wuffvl.json  corpus-v5-vm-target-5w8vma9_.json  corpus-v5-vm-target-h2hwdf1j.json  corpus-v5-vm-target-jy9wasab.json  corpus-v5-vm-target-ue29xjvz.json  corpus-v5-vm-target-vstxltbh.json  fix_tmp_and_run.sh  requirements.txt  run_benchmark.py  run_bextr_fix_validation.sh  run_corpus_rerun.sh  tracee-e2e-guest-0_dgipm8.sh  tracee-e2e-guest-35pmlioo.sh  tracee-e2e-guest-3blwp2uj.sh  tracee-e2e-guest-4xm1dx6y.sh  tracee-e2e-guest-9lg5nswr.sh  tracee-e2e-guest-9zuy_c6e.sh  tracee-e2e-guest-esiimus7.sh  tracee-e2e-guest-gb8wfnlk.sh  tracee-e2e-guest-idp5a1t_.sh  tracee-e2e-guest-j55hiajj.sh  tracee-e2e-guest-jqnjccny.sh  tracee-e2e-guest-mk2o5ubk.sh  tracee-e2e-guest-q7mufle7.sh  tracee-e2e-guest-s8t1prgj.sh  tracee-e2e-guest-u6hyy0_s.sh  tracee-e2e-guest-ynsldklg.sh  (+3 more)
bpfopt/: Cargo.toml
bpfopt-suite/: Cargo.toml
bpfopt-suite/crates/bpfget/: Cargo.toml
bpfopt-suite/crates/bpfprof/: Cargo.toml
bpfopt-suite/crates/bpfrejit/: Cargo.toml
bpfopt-suite/crates/bpfrejit-daemon/: Cargo.toml
bpfopt-suite/crates/bpfverify/: Cargo.toml
bpfopt-suite/crates/kernel-sys/: Cargo.toml
bpfopt/crates/bpfget/: Cargo.toml
bpfopt/crates/bpfopt/: Cargo.toml
bpfopt/crates/bpfopt-core/: Cargo.toml
bpfopt/crates/bpfprof/: Cargo.toml
bpfopt/crates/bpfrejit/: Cargo.toml
bpfopt/crates/bpfverify/: Cargo.toml
bpfopt/crates/kernel-sys/: Cargo.toml
daemon/: CMakeLists.txt  Cargo.toml  Makefile  README.md
daemon/crates/bpfget/: Cargo.toml
daemon/crates/bpfrejit/: Cargo.toml
daemon/crates/bpfverify/: Cargo.toml
daemon/include/bpf_jit_scanner/: pattern_v5.hpp  policy_config.hpp
daemon/src/: analysis.rs  bpf.rs  bpf_tests.rs  commands.rs  commands_tests.rs  dry_run.rs  elf_parser.rs  emit.rs  insn.rs  invalidation.rs  kfunc_discovery.rs  main.rs  matcher.rs  pass.rs  pass_tests.rs  passes.rs  pipeline.rs  platform_detect.rs  profiler.rs  rewriter.rs  server.rs  test_utils.rs  verifier_log.rs
daemon/src/analysis/: branch_target.rs  cfg.rs  liveness.rs  map_info.rs  mod.rs  pgo.rs
daemon/src/passes/: bounds_check_merge.rs  branch_flip.rs  bulk_memory.rs  cond_select.rs  const_prop.rs  dangerous_helper_firewall.rs  dce.rs  endian.rs  extract.rs  live_patch.rs  map_inline.rs  map_inline_tests.rs  mod.rs  mod_tests.rs  real_bpfo_tests.rs  rotate.rs  skb_load_bytes.rs  spectre.rs  utils.rs  wide_mem.rs  wide_mem_tests.rs
daemon/tests/: static_verify.py
daemon/tests/policy_v3_golden/: 02-valid-rotate-only.yaml  07-invalid-missing-pattern-kind.yaml  08-invalid-duplicate-site.yaml  10-invalid-unknown-site-field.yaml
daemon/tests/results/: .gitignore  static_verify.extract_dense.json  static_verify.json
micro/runner/: CMakeLists.txt
micro/runner/include/: micro_exec.hpp
micro/runner/src/: common.cpp  elf_program_loader.cpp  kernel_runner.cpp  llvmbpf_runner.cpp  main.cpp
runner/: CMakeLists.txt  Makefile  Makefile.tmp.1757023.1774489793123  machines.yaml  repos.yaml
runner/compat/upstream_selftests/: bpf_smc.skel.h  remote_selftest_compat.h
runner/config/: README.md  upstream_selftests_selection.tsv
runner/containers/: README.md  katran-artifacts.Dockerfile  kernel-fork.Dockerfile  runner-build.Dockerfile  runner-runtime.Dockerfile
runner/docker/: arm64-crossbuild.Dockerfile
runner/include/: bpf_helpers.hpp  daemon_client.hpp  json_parser.hpp  micro_exec.hpp
runner/libs/: __init__.py  agent.py  app_suite_schema.py  arm64_container_build.py  arm64_host_build.py  arm64_kernel_config.py  arm64_sysroot.py  attach.py  aws_common.py  aws_executor.py  aws_kernel_artifacts.py  aws_local_prep.py  aws_remote_host.py  aws_remote_prep.py  aws_remote_prereqs.py  batch_runner.py  benchmark_catalog.py  benchmark_net.py  benchmarks.py  bpf_stats.py  build_remote_bundle.py  build_upstream_selftests.py  case_common.py  catalog.py  cli_support.py  commands.py  corpus.py  daemon_session.py  environment.py  execute_workspace.py  file_lock.py  guest_prereqs.py  input_generators.py  input_specs.yaml  inventory.py  k2.py  kernel_modules.py  kinsn.py  kvm_executor.py  kvm_local_prep.py  (+30 more)
runner/libs/app_runners/: __init__.py  base.py  bcc.py  bpftrace.py  bpftrace_support.py  calico.py  cilium.py  coroot_node_agent.py  datadog_agent.py  etcd_support.py  katran.py  katran_support.py  kubearmor.py  (+17 more)
runner/mk/: arm64_defaults.mk  build.mk  katran-artifacts.mk  local_prep.mk
runner/scripts/: arm64-kernel-config.sh  arm64_kernel_config_common.sh  arm64_qemu_smoke.py  arm64_runtime_bundle_lib.sh  arm64_t4g_remote_benchmark.py  aws_arm64.sh  aws_arm64_kernel_config.sh  aws_common_lib.sh  aws_executor.sh  aws_kernel_artifacts_lib.sh  aws_local_prep_lib.sh  aws_prep_paths_lib.sh  aws_remote_prep.sh  aws_remote_prep_lib.sh  aws_remote_prereqs.sh  aws_x86.sh  bpf_profiler.py  bpfrejit-install  build-arm64-daemon-host.sh  build-arm64-portable-binary-host.sh  build-arm64-repo-tests-host.sh  build-arm64-runner-host.sh  build-arm64-scx-host.sh  build-arm64-test-artifacts.sh  build-arm64-workload-tools-host.sh  build-x86-portable-libbpf.sh  build_corpus_native.py  build_corpus_objects.py  build_remote_bundle.sh  build_scx_artifacts.py  build_upstream_selftests.sh  capture_map_state.py  collect_e2e_profile.py  collect_e2e_profile.sh  cross-arm64-build.sh  cross-arm64-selftest.sh  execute_workspace.sh  fetch_corpus_repos.py  install_guest_prereqs.sh  k2_comparison.py  (+20 more)
runner/src/: batch_runner.cpp  bpf_helpers.cpp  common.cpp  daemon_client.cpp  elf_program_loader.cpp  json_parser.cpp  kernel_runner.cpp  llvmbpf_runner.cpp  main.cpp  perf_counters.cpp
runner/suites/: __init__.py  _common.py  corpus.env  corpus.py  e2e.env  e2e.py  micro.env  micro.py  test.env  test.py
runner/targets/: aws-arm64.env  aws-x86.env  x86-kvm.env
(+7825 files in other folders)
