[workspace]
members = [
    "crates/bpfopt-core",
    "crates/bpfopt",
    "crates/bpfverify",
    "crates/bpfprof",
    "crates/bpfget",
    "crates/bpfrejit",
    "crates/bpfrejit-daemon",
    "crates/kernel-sys",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
goblin = "0.10.5"

[profile.release]
opt-level = 3
lto = true
