[workspace]
members = [
    "crates/bpfopt-core",
    "crates/bpfopt",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
goblin = "0.10.5"

[profile.release]
opt-level = 3
lto = true
