[package]
name = "bpfrejit-daemon"
version = "0.1.0"
edition = "2021"
description = "BpfReJIT userspace daemon — scans and optimizes live kernel BPF programs"

[[bin]]
name = "bpfrejit-daemon"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
goblin = "0.10.5"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 3
lto = true
