[package]
name = "bpfget"
version = "0.1.0"
edition = "2021"
description = "Read BPF program bytecode and metadata from kernel"

[[bin]]
name = "bpfget"
path = "src/main.rs"

[dependencies]
kernel-sys = { path = "../kernel-sys" }
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
