[package]
name = "bpfprof"
version = "0.1.0"
edition = "2021"
description = "BPF program runtime profiler CLI"

[[bin]]
name = "bpfprof"
path = "src/main.rs"

[dependencies]
kernel-sys = { path = "../kernel-sys" }
anyhow.workspace = true
clap.workspace = true
libc.workspace = true
serde.workspace = true
serde_json.workspace = true
