[package]
name = "bpfverify"
version = "0.1.0"
edition = "2021"
description = "BPF bytecode verifier CLI (BPF_PROG_LOAD dry-run)"

[[bin]]
name = "bpfverify"
path = "src/main.rs"

[dependencies]
bpfopt-core = { path = "../bpfopt-core" }
kernel-sys = { path = "../kernel-sys" }
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
