[package]
name = "bpfget"
version = "0.1.0"
edition = "2021"
description = "Read live BPF program bytecode, metadata, maps, and target descriptors"

[[bin]]
name = "bpfget"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
kernel-sys = { path = "../kernel-sys" }
