[package]
name = "bpfopt"
version = "0.1.0"
edition = "2021"
description = "BPF bytecode optimizer (library + CLI)"

[[bin]]
name = "bpfopt"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
kernel-sys = { path = "../kernel-sys" }
