[package]
name = "bpfverify"
version = "0.1.0"
edition = "2021"
description = "Verify raw BPF bytecode and emit verifier reports"

[[bin]]
name = "bpfverify"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
kernel-sys = { path = "../kernel-sys" }
